<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Randomizer</string>
    
    <!-- Main screen -->
    	<!-- Menu options -->
    	<string name="optionsTitle">Preferences</string>

    	<string name="optLanguage">Language</string>
    					<!-- TODO add more languages -->
    					<!-- TODO insert flags here -->
    	<string-array name="optLanguages_spinner">
    	    <item>English</item>
    	    <item>Ukrainian</item>
    	    <item>Russian</item>
    	</string-array>
    	
    	<string name="optRandomStrategy">Random strategy</string>
    	
    	<string-array name="optRandomStrategies_spinner">
    	    <item>Default</item>
    	    <item>Algorithm</item>
    	    <item>Random.org</item>
    	</string-array>
    	
    	<string name="optDelay">Use delay</string>
    	
    	<!-- Flip coin resources -->
    	<string name="flipCoinDescription">Flip Coin!</string>
    	<string name="flipActionLabel">Flip!</string>
    	<string name="flipResultHead">Head</string>
    	<string name="flipResultTail">Tail</string>
    	
    	
    	<!-- Dice roller resources -->
    	<string name="diceRollerDescription">Dice Roll!</string>	
    	<string name="diceButtonLabel">Roll!</string>
    	
    	<!-- Cards resources -->
    	<string name="cardsDescription">Play with cards</string>	
    	
    	<!-- Lottery helper resources -->
    	<string name="lotteryHelperDescription">Stuck with lottery?</string>	
    	
    	<!-- Custom generator resources -->
    	<string name="customDescription">Make your own generator</string>	
    	
    	<!-- Bitmap generator resources -->
    	<string name="bitmapGeneratorDescription">Create random pics</string>
    
    	<!-- Help section resources -->
    	<string name="helpDescription">What to do?</string>	
    	
    	<!-- About section resources -->
    	<string name="aboutDescription">
    	    <![CDATA[
    	    	Author: Mykhailo Kozik
    	    	Version: 0.0.2
    	    ]]>
    	</string>	
		    	
    	
    <string name="diceButton">Dice</string>
    <string-array name="diceType">
        <item>d2</item>
        <item>d4</item>
        <item>d6</item>
        <item>d8</item>
        <item>d100</item>
    </string-array>
    
    <string name="int_gen">Custom int generator</string>
    <string name="intButtonHandler">intButtonHandler</string>
    <string name="int_from">From:</string>
    <string name="int_to">To:</string>
    <string name="int_generate">Generate</string>
    <string name="intGenerateHandler">intGenerateHandler</string>
    <string name="intResult">Result:</string>
    
    <string name="double_gen">Custom double generator</string>
    <string name="doubleGenerateHandler">doubleGenerateHandler</string>
    
    <string name="about">About</string>
    
</resources>