<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/dice_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diceButton"
        android:onClick="diceButtonHandler" />
    
    <Button
        android:id="@+id/int_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/int_gen"
        android:onClick="intButtonHandler" />

    <Button
        android:id="@+id/double_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/double_gen"
        android:onClick="doubleButtonHandler" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:onClick="aboutButtonHandler" />

</LinearLayout>