<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/fromTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/int_from"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/fromTextEdit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|numberSigned" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/toTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/int_to"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/toTextEdit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|numberSigned" >
        </EditText>
    </TableRow>
    
    <TableRow 
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="intGenerateHandler"
            android:text="@string/int_generate" />
        
    </TableRow>
    
    <TableRow 
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/intResultLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intResult"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/intResultArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </TableRow>

</TableLayout>